--- a/dice-example/index.html
+++ b/dice-example/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <main>
+        <article class="dice" id="theDice">
+            <aside></aside>
+            <aside></aside>
+            <aside></aside>
+            <aside></aside>
+            <aside></aside>
+            <aside></aside>
+        </article>
+    </main>
+    <footer>
+        <button id="throw-button">Kasta</button>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
